[package]
name = "wrongodb"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
tempfile = "3"

