[package]
name = "wrongodb"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = "2"
byteorder = "1"
crc32fast = "1"
mongodb = "3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
tempfile = "3"
futures-util = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "insert_latency"
harness = false
